src/test/deca/syntax/invalid/resultats/test23_if-lex.res
'{': [@0,278:278='{',<36>,14:0]
IDENT: [@1,280:282='int',<26>,15:0]
IDENT: [@2,284:284='i',<26>,15:4]
';': [@3,285:285=';',<39>,15:5]
'if': [@4,288:289='if',<11>,16:1]
'(': [@5,290:290='(',<34>,16:3]
'true': [@6,291:294='true',<24>,16:4]
')': [@7,295:295=')',<35>,16:8]
IDENT: [@8,299:299='i',<26>,17:2]
'=': [@9,301:301='=',<29>,17:4]
INT: [@10,303:303='2',<1>,17:6]
';': [@11,304:304=';',<39>,17:7]
'println': [@12,309:315='println',<18>,19:1]
'(': [@13,316:316='(',<34>,19:8]
STRING: [@14,317:323='"Hello"',<47>,19:9]
')': [@15,324:324=')',<35>,19:16]
';': [@16,325:325=';',<39>,19:17]
'}': [@17,327:327='}',<37>,20:0]
